--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 30 2019 03:49:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Jul 01 2019 17:15:40 GMT+0000 (UTC)  -->
 <html data-wf-page="5cf8044604912025ee5d6275" data-wf-site="5cf804460491209fdc5d6274">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
         <div class="header-div">
           <div class="img-crop img-mh"></div>
           <div class="text-div">
-            <div class="project-title">Visualizing distribution of menstrual health resources</div>
+            <div class="project-title">Visualizing equitable distribution of menstrual health resources</div>
             <p class="project-hashtags hashtags">#branding #print #participatory_design</p>
           </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="header-div">
           <div class="img-crop img-sha"></div>
           <div class="text-div">
-            <div class="project-title">Prototyping a communication platform with Seattle Housing Authority</div>
+            <div class="project-title">Prototyping Yesler Central with Seattle Housing Authority</div>
             <p class="project-hashtags hashtags">#ux_design #ux_research #participatory_design</p>
           </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="header-div">
           <div class="img-crop img-wiux"></div>
           <div class="text-div">
-            <div class="project-title">Rebranding Women in UX</div>
+            <div class="project-title">Rebranding Women in UX as the Media Officer for 2018-19</div>
             <p class="project-hashtags hashtags">#branding #social_media </p>
           </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="header-div">
           <div class="img-crop img-vp"></div>
           <div class="text-div">
-            <div class="project-title">Rebranding a local arts and music venue</div>
+            <div class="project-title">Rebranding the Vera Project</div>
             <p class="project-hashtags hashtags">#branding #visual_communication </p>
           </div>
         </div>
