--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <section class="box about-me w-clearfix">
       <div class="about-text-content">
         <div class="about-headers">
-          <h1 class="about-header">Bonnie Tran is a Chinese, Vietnamese, and American designer + artist living in Brooklyn, NYC. <br></h1>
+          <h1 class="about-header">Bonnie Tran is a Chinese Vietnamese American designer living in Brooklyn, NYC. <br></h1>
           <h1 class="udon-header">And that&#x27;s Udon, a dog.<br></h1>
         </div>
         <div class="about-text">
