--- a/style-sheet.html
+++ b/style-sheet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 03 2022 20:06:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 19 2022 16:53:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d39233a476e9830b136876" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects. Currently at <a href="http://radishlab.com" target="_blank" class="hyperlink">Radish Lab</a>. <span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. Currently designing at <a href="http://radishlab.com" target="_blank" class="hyperlink">Radish Lab</a>. <span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
@@ -63,21 +63,27 @@
           </div>
           <div class="menu-item-project-title">Karman Project</div>
         </a>
-        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/equimundo.html" class="menu-item w-inline-block">
+        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/international-holocaust-remembrance-alliance.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">05</div>
+          </div>
+          <div class="menu-item-project-title">IHRA</div>
+        </a>
+        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/equimundo.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper">
+            <div class="detail">06</div>
           </div>
           <div class="menu-item-project-title">Equimundo</div>
         </a>
         <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/menstrual-equity.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">06</div>
+            <div class="detail">07</div>
           </div>
           <div class="menu-item-project-title">Catalogue of Partial Things</div>
         </a>
         <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/menstrual-maze.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">07</div>
+            <div class="detail">08</div>
           </div>
           <div class="menu-item-project-title">Menstrual Maze</div>
         </a>
