--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 03 2022 20:06:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 19 2022 16:53:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects. Currently at <a href="http://radishlab.com" target="_blank" class="hyperlink">Radish Lab</a>. <span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. Currently designing at <a href="http://radishlab.com" target="_blank" class="hyperlink">Radish Lab</a>. <span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
@@ -61,21 +61,27 @@
           </div>
           <div class="menu-item-project-title">Karman Project</div>
         </a>
-        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/equimundo.html" class="menu-item w-inline-block">
+        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/international-holocaust-remembrance-alliance.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">05</div>
+          </div>
+          <div class="menu-item-project-title">IHRA</div>
+        </a>
+        <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/equimundo.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper">
+            <div class="detail">06</div>
           </div>
           <div class="menu-item-project-title">Equimundo</div>
         </a>
         <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/menstrual-equity.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">06</div>
+            <div class="detail">07</div>
           </div>
           <div class="menu-item-project-title">Catalogue of Partial Things</div>
         </a>
         <a data-w-id="c5ffabeb-3b01-73df-bf9c-4229ffcb2aaa" href="projects/menstrual-maze.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">07</div>
+            <div class="detail">08</div>
           </div>
           <div class="menu-item-project-title">Menstrual Maze</div>
         </a>
@@ -104,22 +110,28 @@
   <div data-delay="0" data-animation="fade" class="home-carousel w-slider" data-autoplay="true" data-easing="linear" style="opacity:0" data-hide-arrows="false" data-disable-swipe="false" data-w-id="fcde013b-94a2-0965-1fc4-f87ffcaba1c7" data-autoplay-limit="0" data-nav-spacing="3" data-duration="0" data-infinite="true">
     <div class="w-slider-mask">
       <div class="w-slide">
-        <a href="projects/wings.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation.png 2090w" sizes="(max-width: 991px) 100vw, 75vw" src="images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation.png" loading="lazy" alt="" class="image"></a>
+        <a href="projects/wings.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, 75vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-WINGS-Foundation.png" alt="" class="image"></a>
       </div>
       <div class="w-slide">
-        <a href="projects/equimundo.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo.png 2090w" sizes="(max-width: 991px) 100vw, 75vw" src="images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo.png" loading="lazy" alt="" class="image"></a>
+        <a href="projects/equimundo.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, 75vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-Equimundo.png" alt="" class="image"></a>
       </div>
       <div class="w-slide">
-        <a href="projects/barbershop-books.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books.png 2090w" sizes="(max-width: 991px) 100vw, 75vw" src="images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books.png" loading="lazy" alt="" class="image"></a>
+        <a href="projects/barbershop-books.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, 75vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-Barbershop-Books.png" alt="" class="image"></a>
       </div>
       <div class="w-slide">
-        <a href="projects/sesame-workshop.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop.png 2090w" sizes="(max-width: 991px) 100vw, 75vw" src="images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop.png" loading="lazy" alt="" class="image"></a>
+        <a href="projects/sesame-workshop.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, 75vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-Sesame-Workshop.png" alt="" class="image"></a>
       </div>
       <div class="w-slide">
-        <a href="projects/the-karman-project.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project.png 2090w" sizes="(max-width: 991px) 100vw, 75vw" src="images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project.png" loading="lazy" alt="" class="image"></a>
+        <a href="projects/the-karman-project.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, 75vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-Karman-Project.png" alt="" class="image"></a>
       </div>
       <div class="w-slide">
-        <a href="projects/menstrual-equity.html" class="home-link-wrapper w-inline-block"><img srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things.png 1500w" sizes="(max-width: 991px) 100vw, (max-width: 2000px) 75vw, 1500px" src="images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things.png" loading="lazy" alt=""></a>
+        <a href="projects/menstrual-equity.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, (max-width: 2000px) 75vw, 1500px" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things.png 1500w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-Catalogue-Of-Partial-Things.png" alt=""></a>
+      </div>
+      <div class="w-slide">
+        <a href="projects/international-holocaust-remembrance-alliance.html" class="home-link-wrapper w-inline-block"><img sizes="100vw" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Social-Media-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Social-Media-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Social-Media-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Social-Media.png 1200w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Social-Media.png" alt=""></a>
+      </div>
+      <div class="w-slide">
+        <a href="projects/international-holocaust-remembrance-alliance.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, (max-width: 2786px) 75vw, 2090px" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print.png" alt=""></a>
       </div>
     </div>
     <div class="left-arrow w-slider-arrow-left">
