--- a/projects/the-karman-project.html
+++ b/projects/the-karman-project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Aug 24 2022 18:45:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Aug 26 2022 21:17:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d500746457f66353e87e05" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -131,7 +131,7 @@
           <div class="detail">webflow development</div>
         </div>
       </div>
-      <p class="body-regular">Radish Lab partnered with The Karman Project to design a visual identity and website that feels fresh and innovative. As the main designer and developer, I worked with my team to create a new visual identity and launch a website within a two-week timeframe. <a href="https://www.karmanproject.org/" target="_blank" class="hyperlink">Visit the live site here.</a>
+      <p class="body-regular">Radish Lab partnered with The Karman Project to design a visual identity and website that feels fresh and innovative. In my role as UX/UI designer and developer, I worked with my team to create a new visual identity and launch a website within a two-week timeframe. <a href="https://www.karmanproject.org/" target="_blank" class="hyperlink">Visit the live site here.</a>
       </p>
       <div class="project-detail-wrapper">
         <div>
