--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Aug 26 2022 21:17:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 05 2022 13:00:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects.<span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. Currently at <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>.<span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
@@ -140,7 +140,7 @@
         <a href="projects/international-holocaust-remembrance-alliance.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, (max-width: 2786px) 75vw, 2090px" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-IHRA-Print.png" alt=""></a>
       </div>
       <div class="w-slide">
-        <a href="projects/international-holocaust-remembrance-alliance.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, (max-width: 2786px) 75vw, 2090px" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png" alt=""></a>
+        <a href="projects/international-holocaust-remembrance-alliance.html" class="home-link-wrapper w-inline-block"><img sizes="(max-width: 991px) 100vw, (max-width: 2786px) 75vw, 2090px" srcset="images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC-p-500.png 500w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC-p-800.png 800w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC-p-1080.png 1080w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC-p-1600.png 1600w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC-p-2000.png 2000w, images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png 2090w" loading="lazy" src="images/Bonnie-Tran-Portfolio-Home-Feature-ClimateKIC.png" alt=""></a>
       </div>
     </div>
     <div class="left-arrow w-slider-arrow-left">
