--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Aug 26 2022 21:17:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 05 2022 13:00:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d3d7206a18b79eb9bf0085" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects.<span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. Currently at <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>.<span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
@@ -123,6 +123,11 @@
     <div class="text-block-wrapper no-indent">
       <h2 class="italic resume-heading">Experience</h2>
       <div class="text-block-wrapper resume-group">
+        <div class="resume-group">
+          <div class="detail">september 2022 – Present</div>
+          <div class="body-regular"><strong>Designer</strong> @ <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>
+          </div>
+        </div>
         <div class="resume-group">
           <div class="detail">july 2020 – August 2022</div>
           <div class="body-regular"><strong>Designer</strong> @ <a href="https://radishlab.com/" target="_blank" class="hyperlink">Radish Lab</a>
