--- a/projects/international-holocaust-remembrance-alliance.html
+++ b/projects/international-holocaust-remembrance-alliance.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Aug 26 2022 21:17:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 05 2022 13:00:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62ceeacd2ab9f2227c4128e8" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects.<span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. Currently at <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>.<span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
