--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="oval-wrapper tag">
         <div class="detail">visual identity</div>
       </div>
-      <div class="body-small">projects. Currently at <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>.<span class="hide">To view work, please visit on a desktop!</span></div>
+      <div class="body-small">projects. <span class="hide">To view work, please visit on a desktop!</span></div>
     </div>
     <div data-w-id="cb09d993-9c13-6152-30d4-02c43b6e2361" class="div-block-2">
       <div class="menu-group">
