--- a/projects/barbershop-books.html
+++ b/projects/barbershop-books.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 21:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 09 2024 16:31:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d4fdd7c5204b33eb454cc9" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -89,6 +89,12 @@
             <div class="detail">11</div>
           </div>
           <div class="menu-item-project-title">Menstrual Maze</div>
+        </a>
+        <a href="../projects/using-set-to-demo-figma.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper">
+            <div class="detail">12</div>
+          </div>
+          <div class="menu-item-project-title">Figma Demo</div>
         </a>
         <a data-w-id="55871438-2b79-467f-0036-b9b1c623c0a3" href="../projects/archive.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
