--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 21:29:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 09 2024 16:31:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body>
   <div id="w-node-b6a7ab0e-34b4-7f7f-8d89-6cf89498a055-52bf9902" class="w-layout-layout quick-stack wf-layout-layout">
     <div id="w-node-_8e883102-d080-f412-36be-5a357589f772-52bf9902" data-w-id="8e883102-d080-f412-36be-5a357589f772" class="w-layout-cell cell">
-      <a href="projects/wings.html" class="link-block w-inline-block"><img src="images/wings.gif" loading="lazy" alt="" class="home-img">
+      <a href="projects/wings.html" class="link-block w-inline-block"><img src="images/wings.gif" loading="lazy" width="461" alt="" class="home-img">
         <h4 class="project-grid-h1">Navigating the Healing Experience Through Trauma-Informed Design</h4>
         <div class="detail">website, brand &amp; Illustration</div>
         <div class="oval-wrapper home">
@@ -112,13 +112,22 @@
       <a href="projects/menstrual-maze.html" class="link-block w-inline-block">
         <div class="oval-wrapper home">
           <div class="detail">11</div>
-        </div><img src="images/menstrual-maze.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/menstrual-maze.png 500w, images/menstrual-maze.png 800w, images/menstrual-maze.png 1080w, images/menstrual-maze.png 1600w, images/menstrual-maze.png 1776w" alt="" class="home-img">
+        </div><img src="images/menstrual-maze.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/menstrual-maze-p-500.png 500w, images/menstrual-maze-p-800.png 800w, images/menstrual-maze-p-1080.png 1080w, images/menstrual-maze-p-1600.png 1600w, images/menstrual-maze.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">Exploring Early Reproductive Health Education with the Menstrual Maze</h4>
         <div class="detail">physical computing</div>
       </a>
     </div>
     <div id="w-node-_3799c0d8-79b8-bfe6-0c6e-ac33212aa376-52bf9902" class="w-layout-cell cell">
-      <a href="projects/archive.html" class="link-block w-inline-block"><img src="images/and-more-thumbnail.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/and-more-thumbnail.png 500w, images/and-more-thumbnail.png 800w, images/and-more-thumbnail.png 1080w, images/and-more-thumbnail.png 1600w, images/and-more-thumbnail.png 1776w" alt="" class="home-img">
+      <a href="projects/using-set-to-demo-figma.html" class="link-block w-inline-block">
+        <div class="oval-wrapper home">
+          <div class="detail">12</div>
+        </div><img src="images/figma-demo-grid.gif" loading="lazy" alt="" class="home-img">
+        <h4 class="project-grid-h1">Recreating a card game to demo Figma</h4>
+        <div class="detail">design exercise &amp; learning tool</div>
+      </a>
+    </div>
+    <div id="w-node-_0bc392fe-a2e0-6c88-d65d-63ec34602f1c-52bf9902" class="w-layout-cell">
+      <a href="projects/archive.html" class="link-block w-inline-block"><img src="images/and-more-thumbnail.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/and-more-thumbnail-p-500.png 500w, images/and-more-thumbnail-p-800.png 800w, images/and-more-thumbnail-p-1080.png 1080w, images/and-more-thumbnail-p-1600.png 1600w, images/and-more-thumbnail.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">and more...</h4>
         <div class="detail">archive</div>
         <div class="oval-wrapper home">
@@ -126,6 +135,8 @@
         </div>
       </a>
     </div>
+    <div id="w-node-_36e62ea9-7078-1445-fc5c-d328238e4b80-52bf9902" class="w-layout-cell"></div>
+    <div id="w-node-eb05da1f-f9ac-4118-c0e7-55edc79e90d2-52bf9902" class="w-layout-cell"></div>
   </div>
   <div class="menu-header-wrap">
     <div class="menu-heading-1 home">
@@ -152,6 +163,9 @@
         <a href="resume.html"><strong class="hyperlink resume">Resume</strong></a>
       </div>
     </div>
+  </div>
+  <div class="footer">
+    <div class="detail c">made with webflow © 2024</div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61d38d1ee8e6e2da8cbf9901" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
