--- a/resume.html
+++ b/resume.html
@@ -141,12 +141,12 @@
       <div class="text-block-wrapper resume-group">
         <div class="resume-group">
           <div class="detail">september 2022 – April 2024</div>
-          <div class="body-regular"><strong>Designer</strong> @ <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>
+          <div class="body-regular"><strong>Environmental Graphic Designer</strong> @ <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>
           </div>
         </div>
         <div class="resume-group">
           <div class="detail">july 2020 – August 2022</div>
-          <div class="body-regular"><strong>Designer</strong> @ <a href="https://radishlab.com/" target="_blank" class="hyperlink">Radish Lab</a>
+          <div class="body-regular"><strong>Product, UX/UI Designer</strong> @ <a href="https://radishlab.com/" target="_blank" class="hyperlink">Radish Lab</a>
           </div>
         </div>
         <div class="resume-group">
@@ -161,7 +161,7 @@
         </div>
         <div class="resume-group">
           <div class="detail">2018 - 2019</div>
-          <div class="body-regular"><strong>Design Intern</strong> @ <a href="http://Carina.org" target="_blank" class="hyperlink">Carina</a>
+          <div class="body-regular"><strong>Product, UX/UI Design Intern</strong> @ <a href="http://Carina.org" target="_blank" class="hyperlink">Carina</a>
           </div>
         </div>
         <div class="resume-group">
