GHDP case study update

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 09 2024 16:31:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 18 2024 20:29:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <div id="w-node-_8e883102-d080-f412-36be-5a357589f772-52bf9902" data-w-id="8e883102-d080-f412-36be-5a357589f772" class="w-layout-cell cell">
       <a href="projects/wings.html" class="link-block w-inline-block"><img src="images/wings.gif" loading="lazy" width="461" alt="" class="home-img">
         <h4 class="project-grid-h1">Navigating the Healing Experience Through Trauma-Informed Design</h4>
-        <div class="detail">website, brand &amp; Illustration</div>
+        <div class="detail">ux/ui DESIGN, brand &amp; Illustration</div>
         <div class="oval-wrapper home">
           <div class="detail">01</div>
         </div>
@@ -30,7 +30,7 @@
     <div id="w-node-_2fc89d82-552e-c010-fd60-1f524aeb4551-52bf9902" class="w-layout-cell cell">
       <a href="projects/barbershop-books.html" class="link-block w-inline-block"><img src="images/Barbershop-Books.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Barbershop-Books-p-500.png 500w, images/Barbershop-Books-p-800.png 800w, images/Barbershop-Books-p-1080.png 1080w, images/Barbershop-Books-p-1600.png 1600w, images/Barbershop-Books.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">The Barbershop as a Third Space with Barbershop Books</h4>
-        <div class="detail">brand &amp; website</div>
+        <div class="detail">ux/ui DESIGN &amp; brand</div>
         <div class="oval-wrapper home">
           <div class="detail">02</div>
         </div>
@@ -55,9 +55,9 @@
       </a>
     </div>
     <div id="w-node-bf8b7e94-d237-132f-df35-c507840ccedd-52bf9902" class="w-layout-cell cell">
-      <a href="projects/chrome-showcase.html" class="link-block w-inline-block"><img src="images/Google-Chrome-Showcase.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Google-Chrome-Showcase-p-500.png 500w, images/Google-Chrome-Showcase-p-800.png 800w, images/Google-Chrome-Showcase-p-1080.png 1080w, images/Google-Chrome-Showcase-p-1600.png 1600w, images/Google-Chrome-Showcase.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Designing Contexts to Showcase Technology</h4>
-        <div class="detail">Environmental graphic design</div>
+      <a href="projects/ghd-partners-website.html" class="link-block w-inline-block"><img src="images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
+        <h4 class="project-grid-h1">GHD Partners Website</h4>
+        <div class="detail">ux/ui design</div>
         <div class="oval-wrapper home">
           <div class="detail">05</div>
         </div>
@@ -84,7 +84,7 @@
     <div id="w-node-_932e876e-545d-a165-cdcc-dd8078773ee2-52bf9902" class="w-layout-cell cell">
       <a href="projects/equimundo.html" class="link-block w-inline-block"><img src="images/Equimundo.gif" loading="lazy" alt="" class="home-img">
         <h4 class="project-grid-h1">Data Visualizations for Gender Equality Research with Equimundo</h4>
-        <div class="detail">infographics &amp; website</div>
+        <div class="detail">infographics &amp; UX/UI design</div>
         <div class="oval-wrapper home">
           <div class="detail">08</div>
         </div>
@@ -93,40 +93,49 @@
     <div id="w-node-_314d55b1-53f7-9fbc-05c9-9bccea26b072-52bf9902" class="w-layout-cell cell">
       <a href="projects/the-karman-project.html" class="link-block w-inline-block"><img src="images/Karman.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Karman-p-500.png 500w, images/Karman-p-800.png 800w, images/Karman-p-1080.png 1080w, images/Karman-p-1600.png 1600w, images/Karman.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">Brand for the Karman Project</h4>
-        <div class="detail">logo, brand &amp; website</div>
+        <div class="detail">logo, brand &amp; UX/UI design</div>
         <div class="oval-wrapper home">
           <div class="detail">09</div>
         </div>
       </a>
     </div>
     <div id="w-node-e9549f97-778d-d2b0-590e-96371ed7a440-52bf9902" class="w-layout-cell cell">
-      <a href="projects/menstrual-equity.html" class="link-block w-inline-block"><img src="images/Catalogue-of-Partial-Things.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Catalogue-of-Partial-Things-p-500.png 500w, images/Catalogue-of-Partial-Things-p-800.png 800w, images/Catalogue-of-Partial-Things-p-1080.png 1080w, images/Catalogue-of-Partial-Things-p-1600.png 1600w, images/Catalogue-of-Partial-Things.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Catalogue of Partial Things</h4>
-        <div class="detail">Print &amp; illustration</div>
+      <a href="projects/chrome-showcase.html" class="link-block w-inline-block"><img src="images/Google-Chrome-Showcase.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Google-Chrome-Showcase-p-500.png 500w, images/Google-Chrome-Showcase-p-800.png 800w, images/Google-Chrome-Showcase-p-1080.png 1080w, images/Google-Chrome-Showcase-p-1600.png 1600w, images/Google-Chrome-Showcase.png 1776w" alt="" class="home-img">
+        <h4 class="project-grid-h1">Designing Contexts to Showcase Technology</h4>
+        <div class="detail">Environmental graphic design</div>
         <div class="oval-wrapper home">
           <div class="detail">10</div>
         </div>
       </a>
     </div>
     <div id="w-node-_50afb587-15bc-85f8-3480-ffcd83660c17-52bf9902" class="w-layout-cell cell">
-      <a href="projects/menstrual-maze.html" class="link-block w-inline-block">
+      <a href="projects/menstrual-equity.html" class="link-block w-inline-block"><img src="images/Catalogue-of-Partial-Things.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/Catalogue-of-Partial-Things-p-500.png 500w, images/Catalogue-of-Partial-Things-p-800.png 800w, images/Catalogue-of-Partial-Things-p-1080.png 1080w, images/Catalogue-of-Partial-Things-p-1600.png 1600w, images/Catalogue-of-Partial-Things.png 1776w" alt="" class="home-img">
+        <h4 class="project-grid-h1">Catalogue of Partial Things</h4>
+        <div class="detail">Print &amp; illustration</div>
         <div class="oval-wrapper home">
           <div class="detail">11</div>
+        </div>
+      </a>
+    </div>
+    <div id="w-node-_3799c0d8-79b8-bfe6-0c6e-ac33212aa376-52bf9902" class="w-layout-cell cell">
+      <a href="projects/menstrual-maze.html" class="link-block w-inline-block">
+        <div class="oval-wrapper home">
+          <div class="detail">12</div>
         </div><img src="images/menstrual-maze.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/menstrual-maze-p-500.png 500w, images/menstrual-maze-p-800.png 800w, images/menstrual-maze-p-1080.png 1080w, images/menstrual-maze-p-1600.png 1600w, images/menstrual-maze.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">Exploring Early Reproductive Health Education with the Menstrual Maze</h4>
         <div class="detail">physical computing</div>
       </a>
     </div>
-    <div id="w-node-_3799c0d8-79b8-bfe6-0c6e-ac33212aa376-52bf9902" class="w-layout-cell cell">
+    <div id="w-node-_0bc392fe-a2e0-6c88-d65d-63ec34602f1c-52bf9902" class="w-layout-cell">
       <a href="projects/using-set-to-demo-figma.html" class="link-block w-inline-block">
         <div class="oval-wrapper home">
-          <div class="detail">12</div>
+          <div class="detail">13</div>
         </div><img src="images/figma-demo-grid.gif" loading="lazy" alt="" class="home-img">
         <h4 class="project-grid-h1">Recreating a card game to demo Figma</h4>
         <div class="detail">design exercise &amp; learning tool</div>
       </a>
     </div>
-    <div id="w-node-_0bc392fe-a2e0-6c88-d65d-63ec34602f1c-52bf9902" class="w-layout-cell">
+    <div id="w-node-_36e62ea9-7078-1445-fc5c-d328238e4b80-52bf9902" class="w-layout-cell">
       <a href="projects/archive.html" class="link-block w-inline-block"><img src="images/and-more-thumbnail.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 90vw, (max-width: 991px) 92vw, 99vw" srcset="images/and-more-thumbnail-p-500.png 500w, images/and-more-thumbnail-p-800.png 800w, images/and-more-thumbnail-p-1080.png 1080w, images/and-more-thumbnail-p-1600.png 1600w, images/and-more-thumbnail.png 1776w" alt="" class="home-img">
         <h4 class="project-grid-h1">and more...</h4>
         <div class="detail">archive</div>
@@ -135,7 +144,6 @@
         </div>
       </a>
     </div>
-    <div id="w-node-_36e62ea9-7078-1445-fc5c-d328238e4b80-52bf9902" class="w-layout-cell"></div>
     <div id="w-node-eb05da1f-f9ac-4118-c0e7-55edc79e90d2-52bf9902" class="w-layout-cell"></div>
   </div>
   <div class="menu-header-wrap">
@@ -144,14 +152,14 @@
         <a href="index.html" aria-current="page" class="w--current"><strong class="hyperlink">Bonnie Lynn Tran</strong></a>  works on  
       </div>
       <div class="oval-wrapper tag">
-        <div class="detail">website</div>
+        <div class="detail">UX/UI</div>
       </div>
       <div class="oval-wrapper tag">
-        <div class="detail">ux strategy</div>
+        <div class="detail">brand</div>
       </div>
       <div class="body-small">and    </div>
       <div class="oval-wrapper tag">
-        <div class="detail">visual identity</div>
+        <div class="detail">egd</div>
       </div>
       <div class="body-small">projects. <span class="hide">Mobile version coming soon!</span></div>
     </div>
