--- a/projects/menstrual-equity.html
+++ b/projects/menstrual-equity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 09 2024 16:31:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 18 2024 20:29:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d71b8603ea381295f33414" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -48,11 +48,11 @@
           </div>
           <div class="menu-item-project-title">IHRA</div>
         </a>
-        <a data-w-id="052ae0c1-34f2-38c8-cd84-d46cfe7148b2" href="../projects/chrome-showcase.html" class="menu-item w-inline-block">
+        <a data-w-id="052ae0c1-34f2-38c8-cd84-d46cfe7148b2" href="../projects/ghd-partners-website.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">05</div>
           </div>
-          <div class="menu-item-project-title">Chrome Showcase</div>
+          <div class="menu-item-project-title">GHD Partners</div>
         </a>
         <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b19" href="../projects/sesame-workshop.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
@@ -78,21 +78,27 @@
           </div>
           <div class="menu-item-project-title">Karman Project</div>
         </a>
-        <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b1c" href="../projects/menstrual-equity.html" aria-current="page" class="menu-item w-inline-block w--current">
+        <a href="../projects/chrome-showcase.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">10</div>
+          </div>
+          <div class="menu-item-project-title">Chrome Showcase</div>
+        </a>
+        <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b1c" href="../projects/menstrual-equity.html" aria-current="page" class="menu-item w-inline-block w--current">
+          <div class="oval-wrapper">
+            <div class="detail">11</div>
           </div>
           <div class="menu-item-project-title">Catalogue of Partial Things</div>
         </a>
         <a data-w-id="59065426-b201-9b9d-e307-9bade376b652" href="../projects/menstrual-maze.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">11</div>
+            <div class="detail">12</div>
           </div>
           <div class="menu-item-project-title">Menstrual Maze</div>
         </a>
         <a href="../projects/using-set-to-demo-figma.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">12</div>
+            <div class="detail">13</div>
           </div>
           <div class="menu-item-project-title">Figma Demo</div>
         </a>
@@ -110,14 +116,14 @@
           <a href="../index.html"><strong class="hyperlink">Bonnie Lynn Tran</strong></a>  works on  
         </div>
         <div class="oval-wrapper tag">
-          <div class="detail">website</div>
+          <div class="detail">UX/UI</div>
         </div>
         <div class="oval-wrapper tag">
-          <div class="detail">ux strategy</div>
+          <div class="detail">brand</div>
         </div>
         <div class="body-small">and    </div>
         <div class="oval-wrapper tag">
-          <div class="detail">visual identity</div>
+          <div class="detail">egd</div>
         </div>
         <div class="body-small">projects. <span class="hide">Mobile version coming soon!</span></div>
       </div>
