--- a/projects/using-set-to-demo-figma.html
+++ b/projects/using-set-to-demo-figma.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 09 2024 16:31:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 18 2024 20:29:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="668d58d73009505de6c4b67c" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -48,11 +48,11 @@
           </div>
           <div class="menu-item-project-title">IHRA</div>
         </a>
-        <a data-w-id="052ae0c1-34f2-38c8-cd84-d46cfe7148b2" href="../projects/chrome-showcase.html" class="menu-item w-inline-block">
+        <a data-w-id="052ae0c1-34f2-38c8-cd84-d46cfe7148b2" href="../projects/ghd-partners-website.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">05</div>
           </div>
-          <div class="menu-item-project-title">Chrome Showcase</div>
+          <div class="menu-item-project-title">GHD Partners</div>
         </a>
         <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b19" href="../projects/sesame-workshop.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
@@ -78,21 +78,27 @@
           </div>
           <div class="menu-item-project-title">Karman Project</div>
         </a>
-        <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b1c" href="../projects/menstrual-equity.html" class="menu-item w-inline-block">
+        <a href="../projects/chrome-showcase.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
             <div class="detail">10</div>
+          </div>
+          <div class="menu-item-project-title">Chrome Showcase</div>
+        </a>
+        <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b1c" href="../projects/menstrual-equity.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper">
+            <div class="detail">11</div>
           </div>
           <div class="menu-item-project-title">Catalogue of Partial Things</div>
         </a>
         <a data-w-id="59065426-b201-9b9d-e307-9bade376b652" href="../projects/menstrual-maze.html" class="menu-item w-inline-block">
           <div class="oval-wrapper">
-            <div class="detail">11</div>
+            <div class="detail">12</div>
           </div>
           <div class="menu-item-project-title">Menstrual Maze</div>
         </a>
         <a href="../projects/using-set-to-demo-figma.html" aria-current="page" class="menu-item w-inline-block w--current">
           <div class="oval-wrapper">
-            <div class="detail">12</div>
+            <div class="detail">13</div>
           </div>
           <div class="menu-item-project-title">Figma Demo</div>
         </a>
@@ -110,14 +116,14 @@
           <a href="../index.html"><strong class="hyperlink">Bonnie Lynn Tran</strong></a>  works on  
         </div>
         <div class="oval-wrapper tag">
-          <div class="detail">website</div>
+          <div class="detail">UX/UI</div>
         </div>
         <div class="oval-wrapper tag">
-          <div class="detail">ux strategy</div>
+          <div class="detail">brand</div>
         </div>
         <div class="body-small">and    </div>
         <div class="oval-wrapper tag">
-          <div class="detail">visual identity</div>
+          <div class="detail">egd</div>
         </div>
         <div class="body-small">projects. <span class="hide">Mobile version coming soon!</span></div>
       </div>
@@ -133,7 +139,6 @@
     <div class="detail copyright">2024 © made with webflow</div>
   </div>
   <div style="-webkit-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="page-content-wrapper">
-
     <div class="text-block-wrapper">
       <h1>Recreating a card game</h1>
       <h1 class="italic">to demo Figma</h1>
@@ -150,10 +155,7 @@
       <p class="body-regular">The screen recording above is a quick recreation of the approach I took to layout the full set of cards in under 10 minutes. </p>
     </div>
     <div class="image-block-wrapper">
-      <div class="w-embed w-iframe w-script">
-        <div style="padding:65% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/981409851?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Figma Demo"></iframe></div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
-      </div>
+      <div style="padding-top:65%" class="w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F981409851%3Fapp_id%3D122963&dntp=1&display_name=Vimeo&url=https%3A%2F%2Fvimeo.com%2F981409851%3Fshare%3Dcopy&image=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F1896730943-f8f06d2666d93908ed23ccbe3210e777eccfd78e72fa45ba96edc4a675747143-d_1280&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=vimeo" width="940" height="611" scrolling="no" allowfullscreen="" title="Figma Demo"></iframe></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61d38d1ee8e6e2da8cbf9901" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
