--- a/projects/ghd-partners-website.html
+++ b/projects/ghd-partners-website.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 18 2024 20:29:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 23 2024 14:35:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6699513ed28c0ce120f1226e" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -140,9 +140,9 @@
   </div>
   <div style="-webkit-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 4px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="page-content-wrapper">
     <div class="image-block-wrapper">
-      <div data-poster-url="../videos/home-hero-poster-00001.jpg" data-video-urls="../videos/home-hero-transcode.mp4,../videos/home-hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="ghd-vid-1 w-background-video w-background-video-atom"><video id="5a91ab8e-ec7e-44c5-98f4-88b1df5b9a54-video" autoplay="" loop="" style="background-image:url(&quot;../videos/home-hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="../videos/home-hero-transcode.mp4" data-wf-ignore="true">
-          <source src="../videos/home-hero-transcode.webm" data-wf-ignore="true">
+      <div data-poster-url="../videos/mobile-home-poster-00001.jpg" data-video-urls="../videos/mobile-home-transcode.mp4,../videos/mobile-home-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="ghd-vid-1 w-background-video w-background-video-atom"><video id="5a91ab8e-ec7e-44c5-98f4-88b1df5b9a54-video" autoplay="" loop="" style="background-image:url(&quot;../videos/mobile-home-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="../videos/mobile-home-transcode.mp4" data-wf-ignore="true">
+          <source src="../videos/mobile-home-transcode.webm" data-wf-ignore="true">
         </video></div>
     </div>
     <div class="text-block-wrapper">
@@ -165,7 +165,7 @@
           <p class="body-regular">Create a digital portfolio showcasing the agency’s expertise and decades of work.<br></p>
         </li>
         <li>
-          <p class="body-regular">Standardize grids, templates, and image ratios into a robust design system, while incorporating dynamic layouts.<br></p>
+          <p class="body-regular">Standardize grids, templates, and image ratios into a robust design system, while incorporating responsive, dynamic layouts.<br></p>
         </li>
         <li>
           <p class="body-regular">Improve the usability of the backend content management system.</p>
@@ -175,7 +175,7 @@
         </li>
       </ul>
     </div>
-    <div class="image-block-wrapper"><img src="../images/all-pages.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/all-pages.png 500w, ../images/all-pages.png 800w, ../images/all-pages.png 1080w, ../images/all-pages.png 1600w, ../images/all-pages.png 2000w, ../images/all-pages.png 2090w" alt="" class="image"></div>
+    <div class="image-block-wrapper"><img src="../images/ghd-mobile.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/ghd-mobile.png 500w, ../images/ghd-mobile.png 800w, ../images/ghd-mobile.png 1080w, ../images/ghd-mobile.png 1600w, ../images/ghd-mobile.png 2000w, ../images/ghd-mobile.png 2090w" alt="" class="image"></div>
     <div class="text-block-wrapper">
       <h3>Bringing Function to the Forefront</h3>
       <p class="body-regular">Functionality and ease of navigation were central to our approach. Instead of hiding filters in a dropdown menu, we showcased them as prominent typographic elements. This achieved two goals: enhancing user navigation and clearly communicating the studio&#x27;s services and areas of expertise.<br></p>
@@ -190,7 +190,7 @@
     <div class="text-block-wrapper">
       <p class="body-regular">We introduced typographic contrast by adding a small numeric annotation to each filter. This numeral informs users of the project count while serving as a visual separator between tags.<br></p>
     </div>
-    <div class="image-block-wrapper"><img src="../images/work-page.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/work-page.png 500w, ../images/work-page.png 800w, ../images/work-page.png 1080w, ../images/work-page.png 1600w, ../images/work-page.png 2000w, ../images/work-page.png 2090w" alt="" class="image">
+    <div class="image-block-wrapper"><img src="../images/work-page.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/work-page-p-500.png 500w, ../images/work-page-p-800.png 800w, ../images/work-page-p-1080.png 1080w, ../images/work-page-p-1600.png 1600w, ../images/work-page-p-2000.png 2000w, ../images/work-page.png 2090w" alt="" class="image">
       <div class="detail caption">project page list view</div>
     </div>
     <div class="text-block-wrapper">
@@ -226,14 +226,17 @@
       <h3>A contemporary palette with a hint of red</h3>
       <p class="body-regular">We minimized the use of the original brand red to serve a more specific and functional role, such as in hover effects and subtle accents. Instead, color is emphasized through photography.<br></p>
     </div>
-    <div class="image-block-wrapper"><img src="../images/ghd-color-palette.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/ghd-color-palette.png 500w, ../images/ghd-color-palette.png 800w, ../images/ghd-color-palette.png 1080w, ../images/ghd-color-palette.png 1600w, ../images/ghd-color-palette.png 2000w, ../images/ghd-color-palette.png 2090w" alt="" class="image"></div>
+    <div class="image-block-wrapper"><img src="../images/ghd-color-palette.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/ghd-color-palette-p-500.png 500w, ../images/ghd-color-palette-p-800.png 800w, ../images/ghd-color-palette-p-1080.png 1080w, ../images/ghd-color-palette-p-1600.png 1600w, ../images/ghd-color-palette-p-2000.png 2000w, ../images/ghd-color-palette.png 2090w" alt="" class="image"></div>
     <div class="image-block-wrapper"><img src="../images/team-page-hovers.gif" loading="lazy" alt="" class="image">
       <div class="detail caption">team page hover effects</div>
     </div>
     <div class="text-block-wrapper">
-      <p class="body-regular">The result is a modern, user-friendly website that not only highlights GHDP&#x27;s expertise and creativity but also provides a seamless and accessible experience for all users, compared to its predecessor shown below.<br></p>
+      <p class="body-regular">The result is a modern, user-friendly website that not only highlights GHDP&#x27;s expertise and creativity but also provides a seamless and accessible experience for all users, compared to its predecessor.<br></p>
     </div>
-    <div class="image-block-wrapper"><img src="../images/ghd-old-site.gif" loading="lazy" alt="" class="image"></div>
+    <div class="image-block-wrapper"><img src="../images/ghd-old-site.gif" loading="lazy" alt="" class="image">
+      <div class="detail caption">Previous website</div>
+    </div>
+    <div class="image-block-wrapper"><img src="../images/all-pages.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/all-pages-p-500.png 500w, ../images/all-pages-p-800.png 800w, ../images/all-pages-p-1080.png 1080w, ../images/all-pages-p-1600.png 1600w, ../images/all-pages-p-2000.png 2000w, ../images/all-pages.png 2090w" alt="" class="image"></div>
     <div class="text-block-wrapper no-indent page-end">
       <h1 class="italic">Thanks for reading!</h1>
       <div class="spacer _40"></div>
