--- a/projects/ghd-partners-website.html
+++ b/projects/ghd-partners-website.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 23 2024 14:35:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 25 2024 14:37:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6699513ed28c0ce120f1226e" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -175,7 +175,7 @@
         </li>
       </ul>
     </div>
-    <div class="image-block-wrapper"><img src="../images/ghd-mobile.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/ghd-mobile.png 500w, ../images/ghd-mobile.png 800w, ../images/ghd-mobile.png 1080w, ../images/ghd-mobile.png 1600w, ../images/ghd-mobile.png 2000w, ../images/ghd-mobile.png 2090w" alt="" class="image"></div>
+    <div class="image-block-wrapper"><img src="../images/ghd-mobile.png" loading="lazy" sizes="(max-width: 991px) 100vw, 75vw" srcset="../images/ghd-mobile-p-500.png 500w, ../images/ghd-mobile-p-800.png 800w, ../images/ghd-mobile-p-1080.png 1080w, ../images/ghd-mobile-p-1600.png 1600w, ../images/ghd-mobile-p-2000.png 2000w, ../images/ghd-mobile.png 2090w" alt="" class="image"></div>
     <div class="text-block-wrapper">
       <h3>Bringing Function to the Forefront</h3>
       <p class="body-regular">Functionality and ease of navigation were central to our approach. Instead of hiding filters in a dropdown menu, we showcased them as prominent typographic elements. This achieved two goals: enhancing user navigation and clearly communicating the studio&#x27;s services and areas of expertise.<br></p>
